Use Boolean.valueOf() in ConfigurationWatchListUtil
LBANDROID-11