@@ -35,7 +35,7 @@ public class ConfigurationWatchListUtil {
 
   public static void setMainWatchURL(Context context, URL url) {
 	if (context == null) return;
-	  
+
     ConfigurationWatchList cwl = getConfigurationWatchList(context);
     if (cwl == null) {
       cwl = new ConfigurationWatchList();
@@ -69,7 +69,7 @@ public class ConfigurationWatchListUtil {
 
   public static boolean wasConfigurationWatchListReset(Context context) {
 	if (context == null) return false;
-	  
+
     Object o = context.getObject(CoreConstants.CONFIGURATION_WATCH_LIST_RESET);
     if (o == null)
       return false;
@@ -79,7 +79,7 @@ public class ConfigurationWatchListUtil {
   }
 
   public static void setConfigurationWatchListResetFlag(Context context, boolean val) {
-    context.putObject(CoreConstants.CONFIGURATION_WATCH_LIST_RESET, new Boolean(val));
+    context.putObject(CoreConstants.CONFIGURATION_WATCH_LIST_RESET, Boolean.valueOf(val));
   }
 
   public static ConfigurationWatchList getConfigurationWatchList(Context context) {
